syntax = "proto3";

service UserLookup {
  rpc GetUser(Req) returns (User);
}

message Req {
  string Token = 1;
}

message User {
  int32 ID = 1;
  string Email = 2;
  string FirstName = 3;
  string LastName = 4;
}
